# routing-table-api

./: .dockerignore  .gitignore  CHANGELOG.md  CLEANUP_ANALYSIS.md  CLEANUP_IMPLEMENTATION_PLAN.md  CONTRIBUTING.md  Dockerfile  Dockerfile-service  Dockerfile-testrunner  FINAL_CLEANUP_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  REFACTORING_ANALYSIS.md  SPONSORSHIP_SETUP.md  bandit-report.json  docker-compose.yml  first.py  forth.py  kubernetes-deploy.yaml  kubernetes-test.yaml  kubernetes.yaml  makefile  podman-pod.yaml  pyproject.toml  requirements.txt  second.py  third.py
.github/: CICD_SETUP.md  FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  coverage-badge.yml  release.yml
archive/: first.py  forth.py  second.py  third.py
challenge/: README.md
podman-systemd/: README.md  routing-table-api-test.service  routing-table-api.service
service/: __main__.py  config.py  main.py
service/lib/: __init__.py  data.py  models.py  radix_tree.py
service/models/: __init__.py
service/utils/: data.py
tests/: test_api.py  test_concurrency.py  test_data.py  test_lpm.py  test_service.py
